--- a/ForSpringPractice/src/main/resources/application.properties
+++ b/ForSpringPractice/src/main/resources/application.properties
@@ -3,6 +3,6 @@ logging.file.path=logs/spring_log.log
 server.servlet.context-path=/intern
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/stdmgt
+spring.datasource.url=jdbc:mysql://localhost:3306/stdmgt?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Hnda@1998
+spring.datasource.password=mizhue
